--- a/.env
+++ b/.env
@@ -24,4 +24,4 @@ POSTGRES_PRISMA_URL=postgres://neondb_owner:BhyTMYkP35Ns@ep-quiet-glitter-a12gop
 
 # `openssl rand -base64 32`
 AUTH_SECRET=Edm3Tw2Bg/WWZBw3DLAVA7Otd8VIYoNPMn0QpWgdD48=
-AUTH_URL=http://localhost:3000/api/auth
+# AUTH_URL=http://localhost:3000/api/auth
